<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/events_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</RelativeLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="#FFFFFF"
        app:hideOnScroll="true"
        app:fabAlignmentMode="center"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:fabCradleMargin="8dp"
        app:fabCradleRoundedCornerRadius="32dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/simpleImageView"
                android:src="@drawable/ic_action_events_list"
                android:contentDescription="@string/list" />

            <TextView
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:enabled="false"
                >

            </TextView>

<!--            <ImageView-->
<!--                style="?android:attr/borderlessButtonStyle"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="center"-->
<!--                android:id="@+id/simpleImageView2"-->
<!--                android:src="@drawable/ic_action_messages"-->
<!--                android:contentDescription="messages" />-->

            <TextView
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:gravity="center">

            </TextView>

            <TextView
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:gravity="center">

            </TextView>

            <TextView
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:gravity="center">

            </TextView>

<!--            <ImageView-->
<!--                style="?android:attr/borderlessButtonStyle"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="center"-->
<!--                android:id="@+id/simpleImageView3"-->
<!--                android:src="@drawable/ic_action_events_notification"-->
<!--                android:contentDescription="notification" />-->

            <ImageView
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/simpleImageView4"
                android:src="@drawable/ic_action_events_account"
                android:contentDescription="@string/account" />

        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scanFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/btn"
        app:layout_anchor="@id/bar"
        app:fabCustomSize="52dp"
        android:contentDescription="@string/scanne" />





</androidx.coordinatorlayout.widget.CoordinatorLayout>
